--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2024"
 [dependencies]
 chrono = { version = "0.4.41", features = ["serde"] }
 fs4 = "0.13.1"
-mime = "0.3.17"
-pheasant_core = { path = "../pheasant/pheasant_core" } 
+pheasant = { path = "../pheasant/pheasant" } 
 serde = "1.0.219"
 serde_json = "1.0.141"
 tokio = { version = "1.46.1", features = ["full"] }
