--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-chrono = { version = "0.4.41", features = ["serde"] }
-fs4 = "0.13.1"
-serde = "1.0.219"
-serde_json = "1.0.141"
 tokio = { version = "1.46.1", features = ["full"] }
-pheasant = { path = "../pheasant" }
+pheasant = { version = "0.1.0", path = "../pheasant" }
+sqlite = "0.37.0"
